Fix graph title when too long

--- a/client/styles/app.less
+++ b/client/styles/app.less
@@ -24,6 +24,14 @@
   cursor: -webkit-grab;
 }
 
+.graph-title {
+  max-height: 20px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  display: block;
+}
+
 .dashboard-graph-placeholder {
   min-height: 100px;
 }
